--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <test.add.opens></test.add.opens>
+  <sonar.organization>shruchika2</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
   <issueManagement>
     <system>GitHub Issues</system>
